package es.pixel.bingo;

import es.pixel.bingo.controller.MainController;

public final class App {
    public static void main(String[] args) {
        MainController.generar();
    }
}
