package es.pixel.bingo.model.entities;

public abstract class Casilla {
    protected int pos;

    public int getPos() {
        return pos;
    }
}
